// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TouchableHighlight disabled={true} /> should be disabled when disabled is true: should deep render when mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} /> should be disabled when disabled is true: should deep render when not mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} /> should be disabled when disabled is true: should shallow render as <TouchableHighlight /> when mocked 1`] = `
<ForwardRef
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} /> should be disabled when disabled is true: should shallow render as <TouchableHighlight /> when not mocked 1`] = `
<ForwardRef
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{}} /> should be disabled when disabled is true and accessibilityState is empty: should deep render when mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{}} /> should be disabled when disabled is true and accessibilityState is empty: should deep render when not mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{}} /> should be disabled when disabled is true and accessibilityState is empty: should shallow render as <TouchableHighlight /> when mocked 1`] = `
<ForwardRef
  accessibilityState={Object {}}
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{}} /> should be disabled when disabled is true and accessibilityState is empty: should shallow render as <TouchableHighlight /> when not mocked 1`] = `
<ForwardRef
  accessibilityState={Object {}}
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{checked: true}} /> should keep accessibilityState when disabled is true: should deep render when mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{checked: true}} /> should keep accessibilityState when disabled is true: should deep render when not mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{checked: true}} /> should keep accessibilityState when disabled is true: should shallow render as <TouchableHighlight /> when mocked 1`] = `
<ForwardRef
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{checked: true}} /> should keep accessibilityState when disabled is true: should shallow render as <TouchableHighlight /> when not mocked 1`] = `
<ForwardRef
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{disabled: false}} /> should overwrite accessibilityState with value of disabled prop: should deep render when mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{disabled: false}} /> should overwrite accessibilityState with value of disabled prop: should deep render when not mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{disabled: false}} /> should overwrite accessibilityState with value of disabled prop: should shallow render as <TouchableHighlight /> when mocked 1`] = `
<ForwardRef
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={true} accessibilityState={{disabled: false}} /> should overwrite accessibilityState with value of disabled prop: should shallow render as <TouchableHighlight /> when not mocked 1`] = `
<ForwardRef
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  disabled={true}
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={undefined} accessibilityState={{disabled: true}} /> should disable button when accessibilityState is disabled: should deep render when mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={undefined} accessibilityState={{disabled: true}} /> should disable button when accessibilityState is disabled: should deep render when not mocked (please verify output manually) 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View />
</View>
`;

exports[`<TouchableHighlight disabled={undefined} accessibilityState={{disabled: true}} /> should disable button when accessibilityState is disabled: should shallow render as <TouchableHighlight /> when mocked 1`] = `
<ForwardRef
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
>
  <View />
</ForwardRef>
`;

exports[`<TouchableHighlight disabled={undefined} accessibilityState={{disabled: true}} /> should disable button when accessibilityState is disabled: should shallow render as <TouchableHighlight /> when not mocked 1`] = `
<ForwardRef
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
>
  <View />
</ForwardRef>
`;

exports[`TouchableHighlight renders correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={Object {}}
>
  <Text>
    Touchable
  </Text>
</View>
`;
